# new_django

./: README.md  catalog.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
blog/templates/blog/includes/: menu.html
catalog/: models.py  urls.py  views.py
catalog/management/commands/: add_catalog.py
catalog/migrations/: 0001_initial.py
catalog/templates/: base.html  contacts.html  home.html  product_detail.html  products_list.html
catalog/templates/catalog/: base.html  product_detail.html  product_list.html
catalog/templates/includes/: menu.html
config/: settings.py  urls.py
